<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/uppergrid">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:textSize="40sp"
        android:id="@+id/tv_editText"
        android:inputType="none"/>
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:id="@+id/button1"
            android:textSize="@dimen/activity_vertical_margin"
            android:text="@string/button1"/>
        <Button
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:id="@+id/button2"
            android:textSize="@dimen/activity_vertical_margin"
            android:text="@string/button2"/>
        <Button
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:id="@+id/button3"
            android:textSize="@dimen/activity_vertical_margin"
            android:text="@string/button3"/>
        <Button
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:id="@+id/buttonsubtract"
            android:textSize="@dimen/activity_vertical_margin"
            android:text="@string/buttonsubtract"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:id="@+id/button4"
            android:text="@string/button4"
            android:textSize="@dimen/activity_vertical_margin"/>
        <Button
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:id="@+id/button5"
            android:textSize="@dimen/activity_vertical_margin"
            android:text="@string/button5"/>
        <Button
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:id="@+id/button6"
            android:text="@string/button6"
            android:textSize="@dimen/activity_vertical_margin"/>
        <Button
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:id="@+id/buttonmultiply"
            android:textSize="@dimen/activity_vertical_margin"
            android:text="@string/buttonmultiply"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:id="@+id/button7"
            android:text="@string/button7"
            android:textSize="@dimen/activity_vertical_margin"/>
        <Button
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:id="@+id/button8"
            android:textSize="@dimen/activity_vertical_margin"
            android:text="@string/button8"/>
        <Button
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:id="@+id/button9"
            android:text="@string/button9"
            android:textSize="@dimen/activity_vertical_margin"/>
        <Button
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:id="@+id/buttondivide"
            android:text="@string/buttondivide"
            android:textSize="@dimen/activity_vertical_margin"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:text="@string/button."
            android:textSize="@dimen/activity_vertical_margin"
            android:id="@+id/button."/>
        <Button
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:id="@+id/button0"
            android:text="@string/button0"
            android:textSize="@dimen/activity_vertical_margin"/>
        <Button
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:id="@+id/buttonadd"
            android:text="@string/buttonadd"
            android:textSize="@dimen/activity_vertical_margin"/>
        <Button
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:text="@string/buttonresult"
            android:textSize="@dimen/activity_vertical_margin"
            android:id="@+id/buttonresult"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:text="RESET"
            android:textSize="@dimen/activity_vertical_margin"
            android:id="@+id/reset"
            android:onClick="resetstate"/>
    </LinearLayout>
</LinearLayout>